--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -31,6 +31,8 @@ spec:
         type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: ${MOSQUITTO_IP}
+        externalIPs: 
+          - ${MOSQUITTO_IP}
         externalTrafficPolicy: Local
         ports:
           http:
