--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
     service:
       main:
         type: LoadBalancer
+        loadBalancerIP: "${MOSQUITTO_IP}"
         annotations:
           metallb.universe.tf/loadBalancerIPs: ${MOSQUITTO_IP}
         externalIPs: 
