--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -17,9 +17,12 @@ spec:
         kind: HelmRepository
         name: bjw-s
         namespace: flux-system
-      interval: 15m
   install:
-    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
     image:
       repository: eclipse-mosquitto
@@ -31,8 +34,6 @@ spec:
         type: LoadBalancer
         annotations:
           metallb.universe.tf/loadBalancerIPs: ${MOSQUITTO_IP}
-        externalIPs: 
-          - ${MOSQUITTO_IP}
         externalTrafficPolicy: Local
         ports:
           http:
