--- a/cluster/apps/auth/openldap/helm-release.yaml
+++ b/cluster/apps/auth/openldap/helm-release.yaml
@@ -39,6 +39,7 @@ spec:
       enabled: true
       env:
         PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT: "never"
+        LDAP_SKIP_DEFAULT_TREE: "yes"
       ingress:
         enabled: false
     ltb-passwd:
