--- a/cluster/core/kube-system/intel-device-plugin/app/kustomization.yaml
+++ b/cluster/core/kube-system/intel-device-plugin/app/kustomization.yaml
@@ -1,7 +1,6 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 resources:
-  - kube-vip
-  - kube-dns-configmap.yaml
-  - intel-device-plugin
+  - helm-release.yaml
+
