--- a/cluster/core/kube-system/intel-device-plugin/kustomization.yaml
+++ b/cluster/core/kube-system/intel-device-plugin/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kube-vip
-  - kube-dns-configmap.yaml
-  - intel-device-plugin
+  - app
+  - gpu
