--- a/cluster/core/kube-system/node-feature-discovery/kustomization.yaml
+++ b/cluster/core/kube-system/node-feature-discovery/kustomization.yaml
@@ -1,5 +1,23 @@
+
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/kustomization_v1beta2.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
-resources:
-  - app
+metadata:
+  name: cluster-apps-node-feature-discovery
+  namespace: flux-system
+spec:
+  path: ./cluster/core/kube-system/node-feature-discovery/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: node-feature-discovery
+      namespace: kube-system
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
