--- a/cluster/core/kube-system/kustomization.yaml
+++ b/cluster/core/kube-system/kustomization.yaml
@@ -2,7 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kube-vip
-  - kube-dns-configmap.yaml
-  - intel-device-plugin
-  - node-feature-discovery
+  # Pre Flux-Kustomizations
+  - ./namespace.yaml
+  - ./kube-dns-configmap.yaml
+  # Flux-Kustomizations
+  - ./kube-vip/ks.yaml
+  - ./intel-device-plugin/ks.yaml
+  - ./node-feature-discovery/ks.yaml
+
