--- a/cluster/apps/kube-system/kube-vip/ks.yaml
+++ b/cluster/apps/kube-system/kube-vip/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-kube-vip
   namespace: flux-system
 spec:
-  path: ./cluster/core/kube-system/kube-vip/app
+  path: ./cluster/apps/kube-system/kube-vip/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -13,4 +13,8 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
-
+  postBuild:
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
