--- a/cluster/base/apps.yaml
+++ b/cluster/base/apps.yaml
@@ -2,15 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps
+  name: cluster-apps
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 10m
   dependsOn:
-    - name: charts
-    - name: config
-    - name: core
-    - name: crds
+    # - name: charts
+    # - name: config
+    # - name: core
+    # - name: crds
   path: ./cluster/apps
   prune: true
   sourceRef:
@@ -27,3 +27,26 @@ spec:
         name: cluster-settings
       - kind: Secret
         name: cluster-secrets
+  patches:
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          decryption:
+            provider: sops
+            secretRef:
+              name: sops-age
+          postBuild:
+            substituteFrom:
+              - kind: ConfigMap
+                name: cluster-settings
+              - kind: Secret
+                name: cluster-secrets
+      target:
+        group: kustomize.toolkit.fluxcd.io
+        version: v1beta2
+        kind: Kustomization
+        labelSelector: substitution.flux.home.arpa/disabled notin (true)
+
