--- a/cluster/base/apps.yaml
+++ b/cluster/base/apps.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  dependsOn:
+  # dependsOn:
     # - name: charts
     # - name: config
     # - name: core
