--- a/cluster/apps/default/plex/app/helm-release.yaml
+++ b/cluster/apps/default/plex/app/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       retries: 5
   values:
     image:
-      # https://hub.docker.com/r/plexinc/pms-docker/
+      # renovate: datasource=docker depName=plexinc/pms-docker
       repository: plexinc/pms-docker
       tag: 1.30.2.6563-3d4dc0cce
     env:
