--- a/cluster/apps/default/plex/app/helm-release.yaml
+++ b/cluster/apps/default/plex/app/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
       retries: 5
   values:
     image:
-      # renovate: datasource=docker depName=plexinc/pms-docker
-      repository: plexinc/pms-docker
+      # renovate: datasource=docker depName=docker.io/plexinc/pms-docker
+      repository: docker.io/plexinc/pms-docker
       tag: 1.30.2.6563-3d4dc0cce
     env:
       TZ: "${TIMEZONE}"
