--- a/cluster/apps/networking/external-services/octoprint-networking.yaml
+++ b/cluster/apps/networking/external-services/octoprint-networking.yaml
@@ -1,4 +1,22 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: &app octoprint-externalname
+  namespace: networking
+  labels:
+    app.kubernetes.io/name: *app
+    app.kubernetes.io/instance: *app
+spec:
+  type: ExternalName
+  externalName: "${OCTOPRINT_IP}"
+  ports:
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 80
+
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
