--- a/cluster/apps/networking/traefik/app/kustomization.yaml
+++ b/cluster/apps/networking/traefik/app/kustomization.yaml
@@ -1,9 +1,9 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: networking
 resources:
-  - ./default.yaml
+  - ./helm-release.yaml
+  - ./dashboard.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: traefik
