--- a/cluster/apps/networking/traefik/certificates/kustomization.yaml
+++ b/cluster/apps/networking/traefik/certificates/kustomization.yaml
@@ -3,9 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
-  - ./default.yaml
+  - ./certificates.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: traefik
       app.kubernetes.io/instance: traefik
+
 
