--- a/cluster/apps/networking/traefik/ks.yaml
+++ b/cluster/apps/networking/traefik/ks.yaml
@@ -14,6 +14,22 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-traefik-addons
+  namespace: flux-system
+spec:
+  path: ./cluster/apps/networking/traefik/addons
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
@@ -23,6 +39,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-traefik-tls-store
+    - name: cluster-apps-traefik-addons
   path: ./cluster/apps/networking/traefik/app
   prune: true
   sourceRef:
@@ -55,20 +72,3 @@ spec:
   retryInterval: 1m
   timeout: 3m
 
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
-  name: cluster-apps-traefik-addons
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: cluster-apps-traefik
-  path: ./cluster/apps/networking/traefik/addons
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
