--- a/cluster/apps/networking/error-pages/app/helm-release.yaml
+++ b/cluster/apps/networking/error-pages/app/helm-release.yaml
@@ -33,6 +33,11 @@ spec:
     env:
       TEMPLATE_NAME: ghost
       SHOW_DETAILS: "false"
+    service:
+      main:
+        ports:
+          http:
+            port: 8080
     resources:
       requests:
         memory: 100Mi
