remove traefik crds and migrate system upgrade to new format

--- a/cluster/apps/system-upgrade/system-upgrade-controller/plans/agent-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/plans/agent-plan.yaml
@@ -8,8 +8,7 @@ spec:
   cordon: true
   nodeSelector:
     matchExpressions:
-    - key: node-role.kubernetes.io/master
-      operator: DoesNotExist
+      - {key: node-role.kubernetes.io/control-plane, operator: DoesNotExist}
   prepare:
     args:
     - prepare
