--- a/cluster/apps/system-upgrade/system-upgrade-controller/plans/server-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/plans/server-plan.yaml
@@ -9,10 +9,7 @@ spec:
   cordon: true
   nodeSelector:
     matchExpressions:
-    - key: node-role.kubernetes.io/master
-      operator: In
-      values:
-      - "true"
+      - {key: node-role.kubernetes.io/control-plane, operator: Exists}
   serviceAccountName: system-upgrade
   upgrade:
     image: rancher/k3s-upgrade
