--- a/cluster/core/networking/metallb/helm-release.yaml
+++ b/cluster/core/networking/metallb/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
       retries: 5
   values:
     crds:
-      enabled: false # I install separately in crd folder
+      enabled: true
     controller:
       enabled: true
       loglevel: debug
