--- a/cluster/apps/networking/traefik/ks.yaml
+++ b/cluster/apps/networking/traefik/ks.yaml
@@ -56,3 +56,21 @@ spec:
   retryInterval: 1m
   timeout: 3m
 
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-traefik-external-services
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-traefik
+  path: ./cluster/apps/networking/traefik/external-services
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
