this shouldnt have been left here 🤦

--- a/cluster/apps/default/plex/ks.yaml
+++ b/cluster/apps/default/plex/ks.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-intel-device-plugin-gpu
+    - name: cluster-apps-metallb-address-pool
   path: ./cluster/apps/default/plex/app
   prune: true
   sourceRef:
