--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -33,8 +33,9 @@ spec:
     replicaCount: 1
     serviceDns:
       type: LoadBalancer
-      externalIPs: 
-        - ${PIHOLE_ENDPOINT}
+      loadBalancerIP: "${PIHOLE_ENDPOINT}" 
+      # externalIPs: 
+      #   - ${PIHOLE_ENDPOINT}
       externalTrafficPolicy: Cluster
       annotations:
         metallb.universe.tf/allow-shared-ip: pihole-svc
