--- a/cluster/apps/log-system/loki-stack/helm-values.yaml
+++ b/cluster/apps/log-system/loki-stack/helm-values.yaml
@@ -16,10 +16,16 @@ spec:
         namespace: flux-system
       interval: 15m
   install:
-    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   values:
     grafana:
       enabled: false
+      rbac:
+        pspEnabled: false
     loki:
       persistence:
         enabled: true
