--- a/cluster/flux/config/cluster.yaml
+++ b/cluster/flux/config/cluster.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: home-ops-kubernetes
+  name: home-ops-cluster
   namespace: flux-system
 spec:
   interval: 30m
@@ -29,7 +29,7 @@ spec:
   wait: false
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-ops-cluster
   decryption:
     provider: sops
     secretRef:
