--- a/cluster/apps/cert-manager/cert-manager/ks.yaml
+++ b/cluster/apps/cert-manager/cert-manager/ks.yaml
@@ -9,7 +9,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-ops-cluster
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
@@ -31,7 +31,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-ops-cluster
   interval: 30m
   retryInterval: 1m
   timeout: 3m
