--- a/cluster/apps/kube-system/kube-vip/ks.yaml
+++ b/cluster/apps/kube-system/kube-vip/ks.yaml
@@ -9,7 +9,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-ops-cluster
   interval: 30m
   retryInterval: 1m
   timeout: 3m
