--- a/cluster/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/ks.yaml
@@ -11,7 +11,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-ops-cluster
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
