fix reconcile command

--- a/.taskfiles/ClusterTasks.yaml
+++ b/.taskfiles/ClusterTasks.yaml
@@ -38,4 +38,4 @@ tasks:
   reconcile:
     desc: Force update Flux to pull in changes from your Git repository
     cmds:
-      - flux reconcile source git flux-system {{.CLI_ARGS | default "-n flux-system"}}
+      - flux reconcile source git home-ops-cluster {{.CLI_ARGS | default "-n flux-system"}}
