--- a/cluster/flux/config/cluster.yaml
+++ b/cluster/flux/config/cluster.yaml
@@ -20,7 +20,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: flux-system
+  name: cluster
   namespace: flux-system
 spec:
   interval: 10m0s
