--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -86,5 +86,7 @@ spec:
       data:
         enabled: true
         storageClass: longhorn
+        existingClaim: pvc-hajimari
+        retain: true
         accessMode: ReadWriteOnce
         size: 1Gi
