maybe this? grasping at straws

--- a/cluster/apps/default/home-assistant/postgresql/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/postgresql/helm-release.yaml
@@ -42,6 +42,6 @@ spec:
       persistence:
         enabled: true
         storageClass: longhorn
-        existingClaim: pvc-hass-postgresql
+        existingClaim: pvc-hass-postgresql-0
         retain: true
         size: 5Gi
