--- a/cluster/apps/auth/authelia/ks.yaml
+++ b/cluster/apps/auth/authelia/ks.yaml
@@ -2,15 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-plex
+  name: cluster-apps-authelia
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-apps-intel-device-plugin-gpu
-    - name: cluster-apps-metallb-address-pool
     - name: cluster-apps-traefik
-    - name: cluster-apps-longhorn
-  path: ./cluster/apps/default/plex/app
+    - name: cluster-apps-openldap
+    - name: cluster-apps-auth-postgresql
+    - name: cluster-apps-auth-redis
+  path: ./cluster/apps/auth/authelia/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -18,9 +18,8 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: plex
-      namespace: default
+      name: authelia
+      namespace: auth
   interval: 30m
   retryInterval: 1m
   timeout: 3m
-
