--- a/cluster/apps/default/jellyfin/ks.yaml
+++ b/cluster/apps/default/jellyfin/ks.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/kustomization_v1beta2.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
@@ -8,6 +7,8 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-intel-device-plugin-gpu
+    - name: cluster-apps-traefik
+    - name: cluster-apps-longhorn
   path: ./cluster/apps/default/jellyfin/app
   prune: true
   sourceRef:
