--- a/cluster/apps/default/mosquitto/ks.yaml
+++ b/cluster/apps/default/mosquitto/ks.yaml
@@ -2,15 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-plex
+  name: cluster-apps-mosquitto
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: cluster-apps-intel-device-plugin-gpu
-    - name: cluster-apps-metallb-address-pool
-    - name: cluster-apps-traefik
-    - name: cluster-apps-longhorn
-  path: ./cluster/apps/default/plex/app
+  path: ./cluster/apps/default/mosquitto/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -18,7 +13,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: plex
+      name: mosquitto
       namespace: default
   interval: 30m
   retryInterval: 1m
