--- a/cluster/apps/networking/traefik/app/helm-release.yaml
+++ b/cluster/apps/networking/traefik/app/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
       plugins:
         enabled: true
     rbac:
-      enabled: false
+      enabled: true
     ingressRoute:
       dashboard:
         enabled: true
