--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -5,21 +5,21 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./changedetection-io/ks.yaml
-  - ./grafana/ks.yaml
-  - ./hajimari/ks.yaml
-  - ./home-assistant/ks.yaml
-  - ./jellyfin/ks.yaml
-  - ./lidarr/ks.yaml
-  - ./minio/ks.yaml
-  - ./mosquitto/ks.yaml
-  - ./overseerr/ks.yaml
-  - ./plex/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
-  - ./sabnzbd/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./uptime-kuma/ks.yaml
-  - ./vaultwarden/ks.yaml
-  - ./zigbee2mqtt/ks.yaml
-
+  # - ./changedetection-io/ks.yaml
+  # - ./grafana/ks.yaml
+  # - ./hajimari/ks.yaml
+  # - ./home-assistant/ks.yaml
+  # - ./jellyfin/ks.yaml
+  # - ./lidarr/ks.yaml
+  # - ./minio/ks.yaml
+  # - ./mosquitto/ks.yaml
+  # - ./overseerr/ks.yaml
+  # - ./plex/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
+  # - ./sabnzbd/ks.yaml
+  # - ./sonarr/ks.yaml
+  # - ./uptime-kuma/ks.yaml
+  # - ./vaultwarden/ks.yaml
+  # - ./zigbee2mqtt/ks.yaml
+  #
