attempt existingclaim for openldap, get hass ready

--- a/cluster/apps/auth/openldap/app/helm-release.yaml
+++ b/cluster/apps/auth/openldap/app/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
     persistence:
       enabled: true
       storageClass: longhorn
+      existingClaim: pvc-openldap
       size: 1Gi
     phpldapadmin:
       enabled: true
