--- a/cluster/apps/default/home-assistant/db/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/db/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: hass-postgresql
+  name: home-assistant-db
   namespace: default
 spec:
   dependsOn:
@@ -37,5 +37,5 @@ spec:
       persistence:
         enabled: true
         storageClass: longhorn
-        existingClaim: pvc-hass-postgresql-0
+        existingClaim: pvc-home-assistant-db
         size: 5Gi
