--- a/cluster/apps/default/home-assistant/db/secret.sops.yaml
+++ b/cluster/apps/default/home-assistant/db/secret.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: hass-postgresql-secrets
+    name: home-assistant-db-secrets
     namespace: default
 type: Opaque
 # seems to need both keys, idk why...
