--- a/cluster/apps/default/home-assistant/ks.yaml
+++ b/cluster/apps/default/home-assistant/ks.yaml
@@ -15,7 +15,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: hass-postgresql
+      name: home-assistant-db
       namespace: default
   interval: 30m
   retryInterval: 1m
