one openldap replica...

--- a/cluster/apps/auth/openldap/app/helm-release.yaml
+++ b/cluster/apps/auth/openldap/app/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
       existingSecret: auth-openldap-secrets
     customTLS:
       enabled: false
+    replicaCount: 1
     persistence:
       enabled: true
       storageClass: longhorn
