--- a/cluster/apps/auth/postgresql/ks.yaml
+++ b/cluster/apps/auth/postgresql/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-auth-postgresql
+  name: cluster-apps-authelia-postgresql
   namespace: flux-system
 spec:
   dependsOn:
@@ -15,7 +15,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: postgresql
+      name: authelia-postgresql
       namespace: auth
   interval: 30m
   retryInterval: 1m
