--- a/cluster/apps/auth/redis/app/helm-release.yaml
+++ b/cluster/apps/auth/redis/app/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: redis
+  name: authelia-redis
   namespace: auth
 spec:
   dependsOn:
