--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -9,13 +9,14 @@ resources:
   - ./grafana/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  # - ./jellyfin/ks.yaml
-  # - ./lidarr/ks.yaml
+  - ./jellyfin/ks.yaml
+  - ./lidarr/ks.yaml
   - ./minio/ks.yaml
   - ./mosquitto/ks.yaml
   - ./overseerr/ks.yaml
-  # - ./plex/ks.yaml
+  - ./plex/ks.yaml
   - ./prowlarr/ks.yaml
+  - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
