--- a/cluster/apps/pihole/pihole/ks.yaml
+++ b/cluster/apps/pihole/pihole/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: pihole
-      namespace: default
+      namespace: pihole
   interval: 30m
   retryInterval: 1m
   timeout: 3m
