--- a/cluster/apps/networking/traefik/ks.yaml
+++ b/cluster/apps/networking/traefik/ks.yaml
@@ -2,23 +2,6 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-traefik-tls-store
-  namespace: flux-system
-spec:
-  path: ./cluster/apps/networking/traefik/tls-store
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-ops-cluster
-  wait: true
-  interval: 30m
-  retryInterval: 1m
-  timeout: 3m
-
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
   name: cluster-apps-traefik
   namespace: flux-system
 spec:
@@ -35,6 +18,25 @@ spec:
       kind: HelmRelease
       name: traefik
       namespace: networking
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-traefik-tls-store
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-traefik
+  path: ./cluster/apps/networking/traefik/tls-store
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster
+  wait: true
   interval: 30m
   retryInterval: 1m
   timeout: 3m
