service and port for overseerr

--- a/cluster/apps/default/overseerr/app/helm-release.yaml
+++ b/cluster/apps/default/overseerr/app/helm-release.yaml
@@ -30,6 +30,11 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       LOG_LEVEL: "info"
+    service:
+      main:
+        ports:
+          http:
+            port: 5055
     ingress:
         main:
           enabled: true
