--- a/cluster/apps/default/qbittorrent/app/helm-release.yaml
+++ b/cluster/apps/default/qbittorrent/app/helm-release.yaml
@@ -11,46 +11,22 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: app-template
-      version: 1.4.0
+      chart: qbittorrent
+      version: 13.5.2
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: k8s-at-home-charts
         namespace: flux-system
+      interval: 15m
   install:
-    remediation:
-      retries: 5
-  upgrade:
-    remediation:
-      retries: 5
+    createNamespace: true
   values:
     image:
-      repository: ghcr.io/onedr0p/qbittorrent
-      tag: 4.5.2@sha256:621c2e012820a2f5d4a4e37ca6bf8aec40ebd0183f6f7d274808a7ac45a135d0
+      repository: ghcr.io/k8s-at-home/qbittorrent
+      tag: v4.4.2
     env:
       TZ: "${TIMEZONE}"
       WAIT_FOR_VPN: "true"
-    service: 
-      main:
-        ports:
-          http:
-            port: 8080
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: "traefik"
-        annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/icon: "cloud-download"
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,lidarr-theme@file
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
     persistence:
       config:
         enabled: true
@@ -75,14 +51,16 @@ spec:
     addons:
       vpn:
         enabled: true
-        type: gluetun
+        type: openvpn
+        openvpn:
+          authSecret: qbittorrent-secrets
         securityContext:
           runAsGroup: 0
           runAsUser: 0
-          # capabilities:
-          #   add:
-          #     - NET_ADMIN
-          #     - SYS_MODULE
+          capabilities:
+            add:
+              - NET_ADMIN
+              - SYS_MODULE
         env:
           TZ: "${TIMEZONE}"
           FIREWALL: 'on'
