perhaps this config will make qbittorrent work with vpn

--- a/cluster/apps/default/qbittorrent/app/kustomization.yaml
+++ b/cluster/apps/default/qbittorrent/app/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./helm-release.yaml
   - ./secret.sops.yaml
-  - ./ingressroute.yaml
+  # - ./ingressroute.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: qbittorrent
