when all else fails, try root 😢

--- a/cluster/apps/default/qbittorrent/app/helm-release.yaml
+++ b/cluster/apps/default/qbittorrent/app/helm-release.yaml
@@ -80,6 +80,8 @@ spec:
             repository: docker.io/qmcgaw/gluetun
             tag: v3.33.0
         securityContext:
+          runAsGroup: 0
+          runAsUser: 0
           capabilities:
             add:
               - NET_ADMIN
