--- a/cluster/apps/default/qbittorrent/app/secret.sops.yaml
+++ b/cluster/apps/default/qbittorrent/app/secret.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:23otWDgn8g==,iv:5DnJxMTOlL3dMjxW+ZY12Y/Il5bk6MCeYgmv0vuC43w=,tag:g1MsCRYYtc14a2yZBDLYww==,type:str]
-    OPENVPN_USER: ENC[AES256_GCM,data:lI82ALLIVX5R1v5on+YlMHo=,iv:vCzeriYV8QUf3TMHigisFhFmagMzF6abzE2hgbbMWcI=,tag:6rwN1PR35S9QCESz2Vp/PQ==,type:str]
-    OPENVPN_PASSWORD: ENC[AES256_GCM,data:jjuGXtfYIOEIfC8s5cU=,iv:2YpNmR79UT7Ple75Vmu72t2HkDXtfUTXK20DTojcWio=,tag:9pF86fVl1eUdCL8a9QfVwg==,type:str]
-    SERVER_REGIONS: ENC[AES256_GCM,data:3QKRbkRqZg==,iv:buPESLHmoFCoetKLwPoU1LaRU+kp88niic8QQ81+QWQ=,tag:VuksTL1xmfzFquSWptITfA==,type:str]
+    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:npklSSV9Wg==,iv:mtQe6Q5xBsNmdrFYAMdc7jcHiHFdWPzjIWeZdisyqoM=,tag:XNktikgi5H7a188egu4xfw==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:iPVRu82ujAzfBrOA2r+4Gng=,iv:+Pkbdu/WDa3YOHCU0QwHV/XP3Fr0y1pfPALNNzjotVE=,tag:f8JQjED0xe/PSjBOmkmo7g==,type:str]
+    OPENVPN_PASSWORD: ENC[AES256_GCM,data:ViBVNXCWD34/Er1as1A=,iv:wwnsyNMIzvfp6D62vRkOJI1FMWf6xgdn8E7xmRxu+ho=,tag:qzKibKVXKc4C22PMczJ6Dw==,type:str]
+    SERVER_REGIONS: ENC[AES256_GCM,data:BKP3Ai+F2iiUD3Y=,iv:7J/k19VwQC0xbf/Qg4aeEIYG1tZ4oPxS78tIn6b+qbo=,tag:g5lYcGb0uac20Mz9WUobZg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPL1FETE9RMm9WQ0pzdUlT
-            RnBqa1pzVysvcU9nT2hJa2ZxQzNIRG94aG5jCmUzVmpiUVNBOC8zZDhjZkY5SWhO
-            dThydEp1RmxaR1hNaVhpV21uOG5JTUEKLS0tIHRvcGN0ZTZUbTVBR2dHL3JibDdN
-            cGo2QkxhZnlUb2hWR1lMb1ErZFBjQjAKfJQERZ6WU5nVqb9ZUHaqa3ASJ2St1EPS
-            EEj/NUUBA5WBbv4oeHYi4LdmxGmBd7jERBfI2zbbibBTBxosTNG7bA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYWxZQ2pIRnYvU29pZWFu
+            T3haOHVGWWExVnVVaVRwaDhoRnQrRjlhR0dNClcxT2pCNG41NXNTRnZ5NDBMdGt2
+            TTVLeXJvMXdDcmZ2T1E4VUZxMVhvZXMKLS0tIDVhWlNVQUYxYUV5VlVzam9tWHhP
+            VW5sT0phTjdtYTZ3K0JpZEhUTXVLLzAKH5Tx+hWYplUBfox5R3Al1KZjEtDvh+lV
+            XR53X5nlEdk3WtCFP7RGdhCDvOExPlcpmgLyhRoB1sr8k113Vqs3TA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-29T07:02:56Z"
-    mac: ENC[AES256_GCM,data:5nvxH0Ym6qXSsH+Ga9ayD40qIXclPY7D4AMFRjklejGrqjYWeA9TaR/JaAzfVDFhkTYGIyaqiPOw9p3u2GT5pFQrH55RjemLNdBILk0KTQbiaKeHUoKcsFbTmVL28VlHOjSfWZGpjwzItfWjnlBGIbGvxjRZnqB1wjofINwjCRs=,iv:pU1rc7KBEnCtwC4LBFHuDQzfCZ7pUaA13uTbdSh4RMs=,tag:pOO8egsjHPqAAYT+l/A82A==,type:str]
+    lastmodified: "2023-04-29T09:01:05Z"
+    mac: ENC[AES256_GCM,data:GwFpAqmPM0INpTz2eG9jBX31R1mlqTeU8v9V0181d7KFLg1oIAzfGhEt2b2yLc+P8ZrIknGEnI5Z7ttTSxgsbuWgloaxOfPM7hZNj5yb+vOl2QRI//mKcMRZi0lMgXaXU5ju6tP/R2nawoowI16aaVWEMxk4i8ph75UPEsl3cz8=,iv:7eAtiezhz+ff5DUMr2YBUx65FJhs1ifBiC5TsXDR240=,tag:/UwkaXZ9Hg3V087bMAEl2w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
