--- a/cluster/apps/default/monica/database/helm-release.yaml
+++ b/cluster/apps/default/monica/database/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
       version: 12.1.5
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: bitnami-charts
         namespace: flux-system
       interval: 5m
   values:
