longhorn not longhorn static for pvc

--- a/cluster/apps/default/monica/app/pvc.yaml
+++ b/cluster/apps/default/monica/app/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: monica-config
   namespace: default
 spec:
-  storageClassName: longhorn-static
+  storageClassName: longhorn
   accessModes:
   - ReadWriteOnce
   resources:
