--- a/cluster/apps/default/monica/app/helm-release.yaml
+++ b/cluster/apps/default/monica/app/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
       version: 1.4.0
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: bjw-s-charts
         namespace: flux-system
       interval: 5m
   values:
