fix: new app_key for monica

--- a/cluster/apps/default/monica/app/secret.sops.yaml
+++ b/cluster/apps/default/monica/app/secret.sops.yaml
@@ -5,24 +5,4 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    app-key: ENC[AES256_GCM,data:fcIXKspPA+xl/J8oVo8l/0CKyozej2C914SmGr46W5aaAQXVqkcMHSjr3g==,iv:SuqHMo9BYqXRqRNrobV2jibx8SRoSB55B3o3mtSBsZg=,tag:vXWBXFOMs67KCA/Kal0/9A==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKanVPOWFqZFFhdGRNWEpy
-            QWdsQXlRcklDazh2RTNrWU01MkVZbm9Bem0wCkVybk10b1d2cGU3MDlubmRocUVs
-            bC9TSlp0bHNtWFBLRWVhUjJ2ZmNFWVkKLS0tIE5pY2tvNHpRdjA3Nk5ZTTI2MVhi
-            RzRpd0hNdTVlZ2U2RWN4bHJBNURFUTgKhoKOPm8+c51yXI6ZxwC3sYbTzZ1gZIKW
-            0EVa8mJzPTlzlp/kKPPkAAOVPbba5wr6y/SY/dgkCyZ2tia20oKZsg==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-05-07T04:44:52Z"
-    mac: ENC[AES256_GCM,data:yaoDCA/ZkapjnRa5LJSLUA8JSflskbGQR1F/7QNhsO+/VEPysCgVtwS2cU/a8s6caqynQToE7sZHT90NmOhYV3t15K3efh/+xibFK1+k4qOaorm9eQ3L/N8ED8q9y4XBgtNYqrCI7ARWx0J8Li3hg0lUnkyAElFYn+KhYDvY798=,iv:pRt+8s9+6hUsW8ex9TI3kQCG+crJjv7FYJfsoLlBYrU=,tag:mufTQp6UKYsFFCDzxPcHOw==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    app-key: base64:CmneEFs39Wxh0Pspvm8RoWBMdMhC8A2QcY2RHAmuu9Y=
