update nordvpn credentials

--- a/cluster/apps/default/qbittorrent/app/secret.sops.yaml
+++ b/cluster/apps/default/qbittorrent/app/secret.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:npklSSV9Wg==,iv:mtQe6Q5xBsNmdrFYAMdc7jcHiHFdWPzjIWeZdisyqoM=,tag:XNktikgi5H7a188egu4xfw==,type:str]
-    OPENVPN_USER: ENC[AES256_GCM,data:iPVRu82ujAzfBrOA2r+4Gng=,iv:+Pkbdu/WDa3YOHCU0QwHV/XP3Fr0y1pfPALNNzjotVE=,tag:f8JQjED0xe/PSjBOmkmo7g==,type:str]
-    OPENVPN_PASSWORD: ENC[AES256_GCM,data:ViBVNXCWD34/Er1as1A=,iv:wwnsyNMIzvfp6D62vRkOJI1FMWf6xgdn8E7xmRxu+ho=,tag:qzKibKVXKc4C22PMczJ6Dw==,type:str]
-    SERVER_REGIONS: ENC[AES256_GCM,data:BKP3Ai+F2iiUD3Y=,iv:7J/k19VwQC0xbf/Qg4aeEIYG1tZ4oPxS78tIn6b+qbo=,tag:g5lYcGb0uac20Mz9WUobZg==,type:str]
+    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:dOaLEuqFjg==,iv:Tay48/C01UuABX1HF+nzlZ7Mc34D4Y3u816+cP8UhwI=,tag:CJPp8eHxVMKDBTFobq6mDw==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:ST5vCl+yBCfpkTH1rcEK2f51DbJ+ID1H,iv:y+ftWBC2XLbkG+h8rGw8i18sLQxaH0Dg6YEXh6ZLnZE=,tag:1Cs218WIeuGAUDl42ohHgw==,type:str]
+    OPENVPN_PASSWORD: ENC[AES256_GCM,data:nr7uO0lBXaX71X6mTek38YPDbHgwKCKo,iv:Yjwy/ejJsusyLCOW67sZ9qyJDCeSGEKjrRj7HJu18r4=,tag:eDURK6FXyq5D+HroRa6kfQ==,type:str]
+    SERVER_REGIONS: ENC[AES256_GCM,data:RRh8gs16/DksctA=,iv:uzTyRwme480Xv4SQdECqOgi2raX5maT4mZK13fy2ses=,tag:jaFLY7BQVaJcarX21qN36w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYWxZQ2pIRnYvU29pZWFu
-            T3haOHVGWWExVnVVaVRwaDhoRnQrRjlhR0dNClcxT2pCNG41NXNTRnZ5NDBMdGt2
-            TTVLeXJvMXdDcmZ2T1E4VUZxMVhvZXMKLS0tIDVhWlNVQUYxYUV5VlVzam9tWHhP
-            VW5sT0phTjdtYTZ3K0JpZEhUTXVLLzAKH5Tx+hWYplUBfox5R3Al1KZjEtDvh+lV
-            XR53X5nlEdk3WtCFP7RGdhCDvOExPlcpmgLyhRoB1sr8k113Vqs3TA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDZDdieGJYcUFrUzZ1ejZE
+            UTlhM3R4eVBGeXBackdGa2ErcWNuSzUzcmlVCkFYaEd0YytSQjlETDRxSENtdUgr
+            eUo4cjgxdWliODBvK25VdjgvelFUY1UKLS0tIGJCUTdxZ0M5aDA3NXduVW5qU1Bp
+            bXI5cEZ0OG94emVVZXp1VzNOVHI4THcKxOqYKGKyRqGCfoxEyDfMY6TFASurCtcS
+            9qoxNL83LOvaThBdrFc4gCNFJQvmOBFz+p7oY8DXNjb944ZQf6tdcQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-29T09:01:05Z"
-    mac: ENC[AES256_GCM,data:GwFpAqmPM0INpTz2eG9jBX31R1mlqTeU8v9V0181d7KFLg1oIAzfGhEt2b2yLc+P8ZrIknGEnI5Z7ttTSxgsbuWgloaxOfPM7hZNj5yb+vOl2QRI//mKcMRZi0lMgXaXU5ju6tP/R2nawoowI16aaVWEMxk4i8ph75UPEsl3cz8=,iv:7eAtiezhz+ff5DUMr2YBUx65FJhs1ifBiC5TsXDR240=,tag:/UwkaXZ9Hg3V087bMAEl2w==,type:str]
+    lastmodified: "2023-07-10T02:08:58Z"
+    mac: ENC[AES256_GCM,data:IPn8H10fd5oTBbTrXWq23JqH/q32YpvUO+VejSt2XYD8JmQ9oAdTP1IEBgVkdcDnh1+aceehZVSAt3phF+Tuifta1bq4bs5c6UuviraM4AFP/l607HHMYquuIUxNQp4q2UTFWoLSj/2zc/yVtuALaJ2ClAhSI4FA2n9EhnGy5G8=,iv:4fIMsOf2LChlM5VXkmA5a1H1NJIwm1RZwRIA3om0Ow4=,tag:aSiygE7TDobWAfEUjGcRCA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
