--- a/cluster/apps/cert-manager/cert-manager/app/kustomization.yaml
+++ b/cluster/apps/cert-manager/cert-manager/app/kustomization.yaml
@@ -1,6 +1,6 @@
 
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
 namespace: cert-manager
 resources:
