--- a/cluster/bootstrap/flux/kustomization.yaml
+++ b/cluster/bootstrap/flux/kustomization.yaml
@@ -1,6 +1,5 @@
 ---
-# yaml-language-server: $schema=https://json.schemastore.org/kustomization
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
 resources:
   - github.com/fluxcd/flux2/manifests/install?ref=v2.0.0
