--- a/cluster/apps/system-upgrade/system-upgrade-controller/app/kustomization.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/app/kustomization.yaml
@@ -1,20 +1,20 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # renovate: datasource=docker image=rancher/system-upgrade-controller
-  - https://github.com/rancher/system-upgrade-controller/releases/download/v0.11.0/crd.yaml
+# renovate: datasource=github-releases depName=rancher/system-upgrade-controller
+  - https://github.com/rancher/system-upgrade-controller/releases/download/v0.12.0/crd.yaml
   - https://github.com/rancher/system-upgrade-controller?ref=v0.12.0
 images:
   - name: rancher/system-upgrade-controller
-    newTag: v0.11.0
-patches:
-  - patch: |
-      $patch: delete
-      apiVersion: v1
-      kind: Namespace
-      metadata:
-        name: system-upgrade
+    newTag: v0.12.0
+patchesStrategicMerge:
+  - |
+    $patch: delete
+    apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: system-upgrade
 labels:
   - pairs:
       app.kubernetes.io/name: system-upgrade-controller
