--- a/cluster/flux/config/cluster.yaml
+++ b/cluster/flux/config/cluster.yaml
@@ -17,7 +17,7 @@ spec:
     # include kubernetes directory
     !/cluster
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: cluster
