--- a/cluster/flux/config/cluster.yaml
+++ b/cluster/flux/config/cluster.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
   name: home-ops-cluster
@@ -17,7 +17,7 @@ spec:
     # include kubernetes directory
     !/cluster
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: cluster
