--- a/cluster/apps/social/lemmy/app/helm-release.yaml
+++ b/cluster/apps/social/lemmy/app/helm-release.yaml
@@ -3,11 +3,15 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: lemmy
-  namespace: default
+  namespace: social
 spec:
   dependsOn:
   - name: longhorn
     namespace: longhorn-system
+  - name: lemmy-db
+    namespace: social
+  - name: lemmy-pictrs
+    namespace: social
   interval: 15m
   chart:
     spec:
@@ -24,4 +28,25 @@ spec:
     remediation:
       retries: 5
   values:
-    # WORK IN PROGRESS
+    image:
+      respository: dessalines/lemmy
+      tag: 0.18.2
+    env:
+      TZ: "${TIMEZONE}"
+      RUST_LOG: "warn,lemmy_server=debug,lemmy_api=debug,lemmy_api_common=debug,lemmy_api_crud=debug,lemmy_apub=debug,lemmy_db_schema=debug,lemmy_db_views=debug,lemmy_db_views_actor=debug,lemmy_db_views_moderator=debug,lemmy_routes=debug,lemmy_utils=debug,lemmy_websocket=debug"
+      RUST_BACKTRACE: "full"
+    service:
+      main:
+        ports:
+          http:
+            port: 8536
+    persistence:
+      config:
+        enabled: true
+        type: "custom"
+        mountPath: "/config/config.hjson"
+        subPath: "config.hjson"
+        volumeSpec:
+          secret:
+            name: lemmy-config
+
