--- a/cluster/apps/social/lemmy/ks.yaml
+++ b/cluster/apps/social/lemmy/ks.yaml
@@ -73,7 +73,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-lemmy
+  name: cluster-apps-lemmy-ui
   namespace: flux-system
 spec:
   dependsOn:
