--- a/cluster/apps/social/lemmy/ui/helm-release.yaml
+++ b/cluster/apps/social/lemmy/ui/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
       retries: 5
   values:
     image:
+      registry: docker.io
       respository: dessalines/lemmy-ui
       tag: 0.18.2
     env:
