--- a/cluster/apps/social/lemmy/pictrs/helm-release.yaml
+++ b/cluster/apps/social/lemmy/pictrs/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
       data:
         enabled: true
         storageClass: longhorn
-        existingClaim: lemmy-pictrs
+        existingClaim: pvc-lemmy-pictrs
         mountPath: /mnt
     podSecurityContext:
       runAsUser: 991
