fix typos in helmrelease

--- a/cluster/apps/social/lemmy/app/helm-release.yaml
+++ b/cluster/apps/social/lemmy/app/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
   values:
     image:
       registry: docker.io
-      respository: dessalines/lemmy
+      repository: dessalines/lemmy
       tag: 0.18.2
     env:
       TZ: "${TIMEZONE}"
