fix lemmy-pictrs secret

--- a/cluster/apps/social/lemmy/pictrs/secret.sops.yaml
+++ b/cluster/apps/social/lemmy/pictrs/secret.sops.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: lemmy-pictrs-secrets
+    name: lemmy-pictrs
     namespace: social
 type: Opaque
 stringData:
-    PICTRS__API_KEY: ENC[AES256_GCM,data:USVHziDsB9yNbRJT5aQ7jt+b5YiZkTiwt9rD/jcuPBulO9CkOBX/i+jdmSBFZ0wvir0=,iv:oXQa3GEPGjiyahUpoCzr10+6b//CNCpCKEguWaVeoVM=,tag:/8fY1yByv4xWSy5OXWCfSA==,type:str]
+    PICTRS__API_KEY: ENC[AES256_GCM,data:KHMpu7de69HK01W8LcUYcXyGb6HbSNbzeeyIfEpf+S8/liXAwjdKULp0LIsogU2igBA=,iv:FGpMdXe08shH9NTPQU6bhVskv6ht8hwa4KHYVkOaWFg=,tag:jIumj+49n/JF/5vG59qZWQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXUkx2VWRmOUJuck9MMUMw
-            eTBPdlVhVElnaGo0bUF5VTJ2RUNNYjhHZjBvCnVMNEhhWUVZNnE4UXR5NHRzRUJh
-            VXN3eGFWY0NkT01qTlNoNWJVR3dxY1EKLS0tIGJ5M21kNDN4MmM5OWdWRWh6bDBa
-            dGNpeHVGTU1LZCs3RzBGUi9QZ3Z5QzgKrtCKz3wsQOAO4+NS6KzPF7/xYIICRtuQ
-            J17WamUIiCAtggZfXfXrAysavdp0cTasgW/IKChZQMzo+lBYhX02Xg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBldEN5ZzNIak5OUkFKaWJr
+            dGovWWtJTUtWczlWdTNhdXdNRlBoeTdyREZZCmtJSkZvZTE2OFRpZ3crVWlmejFh
+            RTQ0YzlEU0hiWncrTnlNQlR6QzF4WjgKLS0tIE1JUXBsRFFBdkx2UEZQalZlZVU4
+            S1NnWjU2Q1h6ZDVadXNFUEoyMVovV1kKQqO+xEsUixIDDPD5xs7MpvRkSUtrGY/E
+            4hotfqVY5DJczedTb5Cc1xChf+m0VBULv3P8zW4qAupbl2d0R+QaGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T20:37:31Z"
-    mac: ENC[AES256_GCM,data:K5V2gW2eSdnkokAjPd81dB6yCoV3YIGDELvbqmphFF/7zSV8eaTgNTxmm9pLTO941NAHtOx9QDltbkCegbW9KEb+SNMFlViqt/3ijeMC/QtkDmuybXVVbilPzElUfNpOZz7062bWaLyHehUkKaOOHADJnJLixaHQ7pYuDCY95EI=,iv:ehqXGZtDro7HLz+C0QlUpoS2c1AC4mFNT6UqYGOwVV0=,tag:l8DZ9XeGnUnCOtuY42eG5w==,type:str]
+    lastmodified: "2023-07-11T22:56:17Z"
+    mac: ENC[AES256_GCM,data:N+4JOubzAcnG19soeXbLuuFt4u3bD+X9an++SjRFutDj2xdTaTRqxKkNd9DqBjongR65JGUr4XH5uyf6ZYIHCQleILcK4m2phQ1mLedEl7D/qbfFLAQ4rB4FM44pp49jkTDXxUlRMeOPRf4eeuXxYJ4Xznh7uI2pzkuUzTLA32s=,iv:gSsGsfbA8BeZ4cjtiDOktWxUCVZH9t4uaxKrY7swZs0=,tag:NZYAKzUG2BbKyhL83xE3/Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
